src/components/MealWrapper/MealWrapper.module.scss
//Default for Mobile
.MealWrapper {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  width: 100%;
  background: url("../../images/pokequeenwallpaper.svg");
  background-position: 29%;
  background-attachment: scroll;
  background-size: cover;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  .MealwrapparHeader {
    color: #e34342;
    text-align: center;
  }
  .MealCard1,
  .MealCard2,
  .MealCard3 {
    color: black;
    .MealCardPic1,
    .MealCardPic2,
    .MealCardPic3 {
      width: 180px;
      height: 180px;
      clip-path: circle(44%);
      display: block;
      margin-left: auto;
      margin-right: auto;
    }
    .MealCardTextContainer1,
    .MealCardTextContainer2,
    .MealCardTextContainer3 {
      text-align: center;
      .MealCardHeader1,
      .MealCardHeader2,
      .MealCardHeader3 {
        margin-top: 0px;
      }
      .MealCardText1,
      .MealCardText2,
      .MealCardText3 {
        margin-bottom: 0px;
        margin-top: 0px;
        line-height: 20px;
      }
      .MealCardPris1,
      .MealCardPris2,
      .MealCardPris3 {
        color: #e34342;
      }
    }
  }
}
//Desktop
@media (min-width: 768px) {
  .MealWrapper {
    display: flex;
    flex-direction: row;
    min-height: 100vh;
    width: 100%;
    background-color: rgb(184, 175, 177);
  }
  .MealCard1,
  .MealCard2,
  .MealCard3 {
    flex-grow: 1;
  }
}
//Tablet
@media (min-width: 480px) and (max-width: 768px) {
}
//Mobile

